@@ -38,7 +38,7 @@
 
 #include "xmlrpc-c/base.h"
 #include "xmlrpc-c/server.h"
-#include "xmlrpc-c/cgi.h"
+#include "xmlrpc-c/server_cgi.h"
 
 
 /*=========================================================================
@@ -47,15 +47,19 @@
 **  These routines send various kinds of responses to the server.
 */
 
-static void send_xml (char *xml_data, size_t xml_len)
-{
+static void 
+send_xml(const char * const xml_data,
+         size_t       const xml_len) {
+#ifdef _WIN32 
+    _setmode(_fileno(stdout), _O_BINARY); 
+#endif 
     /* Send our CGI headers back to the server.
     ** XXX - Coercing 'size_t' to 'unsigned long' might be unsafe under
     ** really weird circumstances. */
     fprintf(stdout, "Status: 200 OK\n");
     /* Handle authentication cookie being sent back. */
     if (getenv("HTTP_COOKIE_AUTH") != NULL)
-	fprintf(stdout, "Set-Cookie: auth=%s\n", getenv("HTTP_COOKIE_AUTH"));
+        fprintf(stdout, "Set-Cookie: auth=%s\n", getenv("HTTP_COOKIE_AUTH"));
     fprintf(stdout, "Content-type: text/xml; charset=\"utf-8\"\n");
     fprintf(stdout, "Content-length: %ld\n\n", (unsigned long) xml_len);
 
@@ -63,8 +67,16 @@ static void send_xml (char *xml_data, size_t xml_len)
     fwrite(xml_data, sizeof(char), xml_len, stdout);
 }
 
-static void send_error (int code, char *message, xmlrpc_env *env)
-{
+
+
+static void
+send_error(int          const code,
+           const char * const message,
+           xmlrpc_env * const env) {
+
+#ifdef _WIN32 
+    _setmode(_fileno(stdout), _O_BINARY); 
+#endif 
     /* Send an error header. */
     fprintf(stdout, "Status: %d %s\n", code, message);
     fprintf(stdout, "Content-type: text/html\n\n");
@@ -76,8 +88,8 @@ static void send_error (int code, char *message, xmlrpc_env *env)
 
     /* Print out the XML-RPC fault, if present. */
     if (env && env->fault_occurred)
-	fprintf(stdout, "<p>XML-RPC Fault #%d: %s</p>\n",
-		env->fault_code, env->fault_string);
+        fprintf(stdout, "<p>XML-RPC Fault #%d: %s</p>\n",
+                env->fault_code, env->fault_string);
 }
 
 
@@ -89,12 +101,12 @@ static void send_error (int code, char *message, xmlrpc_env *env)
 **  and log the fault to our server log.
 */
 
-static void die_if_fault_occurred (xmlrpc_env *env)
-{
+static void
+die_if_fault_occurred(xmlrpc_env * const env) {
     if (env->fault_occurred) {
         fprintf(stderr, "Unexpected XML-RPC fault: %s (%d)\n",
                 env->fault_string, env->fault_code);
-	send_error(500, "Internal Server Error", env);
+        send_error(500, "Internal Server Error", env);
         exit(1);
     }
 }
@@ -106,63 +118,7 @@ static void die_if_fault_occurred (xmlrpc_env *env)
 **  These are all related, so we group them together.
 */
 
-static xmlrpc_registry *registry;
-
-void xmlrpc_cgi_init (int flags ATTR_UNUSED)
-{
-    xmlrpc_env env;
-
-    xmlrpc_env_init(&env);
-    registry = xmlrpc_registry_new(&env);
-    die_if_fault_occurred(&env);
-    xmlrpc_env_clean(&env);    
-
-#ifdef _WIN32 
-    /* Fix from Jeff Stewart: NT opens stdin and stdout in text mode
-    ** by default, badly confusing our length calculations.  So we need
-    ** to set these file handles to binary. */
-    _setmode(_fileno(stdout), _O_BINARY); 
-    _setmode(_fileno(stdin), _O_BINARY); 
-#endif 
-}
-
-void xmlrpc_cgi_cleanup (void)
-{
-    xmlrpc_registry_free(registry);
-}
-
-xmlrpc_registry *xmlrpc_cgi_registry (void)
-{
-    return registry;
-}
-
-void xmlrpc_cgi_add_method (char *method_name,
-			    xmlrpc_method method,
-			    void *user_data)
-{
-    xmlrpc_env env;
-    xmlrpc_env_init(&env);
-    xmlrpc_registry_add_method(&env, registry, NULL, method_name,
-			       method, user_data);
-    die_if_fault_occurred(&env);
-    xmlrpc_env_clean(&env);    
-}
-
-extern void
-xmlrpc_cgi_add_method_w_doc (char *method_name,
-			     xmlrpc_method method,
-			     void *user_data,
-			     char *signature,
-			     char *help)
-{
-    xmlrpc_env env;
-    xmlrpc_env_init(&env);
-    xmlrpc_registry_add_method_w_doc(&env, registry, NULL, method_name,
-				     method, user_data, signature, help);
-    die_if_fault_occurred(&env);
-    xmlrpc_env_clean(&env);    
-}
-
+static xmlrpc_registry * globalRegistryP;
 
 /*=========================================================================
 **  get_body
@@ -170,8 +126,10 @@ xmlrpc_cgi_add_method_w_doc (char *method_name,
 **  Slurp the body of the request into an xmlrpc_mem_block.
 */
 
-static xmlrpc_mem_block *get_body (xmlrpc_env *env, size_t length)
-{
+static xmlrpc_mem_block *
+get_body(xmlrpc_env * const env,
+         size_t       const length) {
+
     xmlrpc_mem_block *result;
     char *contents;
     size_t count;
@@ -181,6 +139,13 @@ static xmlrpc_mem_block *get_body (xmlrpc_env *env, size_t length)
     /* Error-handling preconditions. */
     result = NULL;
 
+#ifdef _WIN32 
+    /* Fix from Jeff Stewart: NT opens stdin and stdout in text mode
+       by default, badly confusing our length calculations.  So we need
+       to set the file handle to binary. 
+    */
+    _setmode(_fileno(stdin), _O_BINARY); 
+#endif 
     /* XXX - Puke if length is too big. */
 
     /* Allocate our memory block. */
@@ -193,29 +158,28 @@ static xmlrpc_mem_block *get_body (xmlrpc_env *env, size_t length)
     ** really weird circumstances. */
     count = fread(contents, sizeof(char), length, stdin);
     if (count < length)
-	XMLRPC_FAIL2(env, XMLRPC_INTERNAL_ERROR,
-		     "Expected %ld bytes, received %ld",
-		     (unsigned long) length, (unsigned long) count);
+        XMLRPC_FAIL2(env, XMLRPC_INTERNAL_ERROR,
+                     "Expected %ld bytes, received %ld",
+                     (unsigned long) length, (unsigned long) count);
 
  cleanup:
     if (env->fault_occurred) {
-	if (result)
-	    xmlrpc_mem_block_free(result);
-	return NULL;
+        if (result)
+            xmlrpc_mem_block_free(result);
+        return NULL;
     }
     return result;
 }
 
 
-/*=========================================================================
-**  xmlrpc_cgi_process_call
-**=========================================================================
-**  Parse the incoming XML-RPC call, find the right method, call it, and
-**  serialize our response.
-*/
 
-void xmlrpc_cgi_process_call (void)
-{
+void
+xmlrpc_server_cgi_process_call(xmlrpc_registry * const registryP) {
+/*----------------------------------------------------------------------------
+  Get the XML-RPC call from Standard Input and environment variables,
+  parse it, find the right method, call it, prepare an XML-RPC
+  response with the result, and write it to Standard Output.
+-----------------------------------------------------------------------------*/
     xmlrpc_env env;
     char *method, *type, *length_str;
     int length;
@@ -239,31 +203,31 @@ void xmlrpc_cgi_process_call (void)
 
     /* Perform some sanity checks. */
     if (!method || 0 != strcmp(method, "POST")) {
-	code = 405; message = "Method Not Allowed";
-	XMLRPC_FAIL(&env, XMLRPC_INTERNAL_ERROR, "Expected HTTP method POST");
+        code = 405; message = "Method Not Allowed";
+        XMLRPC_FAIL(&env, XMLRPC_INTERNAL_ERROR, "Expected HTTP method POST");
     }
     if (!type || 0 != strcmp(type, "text/xml")) {
-	code = 400; message = "Bad Request";
-	XMLRPC_FAIL(&env, XMLRPC_INTERNAL_ERROR, "Expected text/xml content");
+        code = 400; message = "Bad Request";
+        XMLRPC_FAIL(&env, XMLRPC_INTERNAL_ERROR, "Expected text/xml content");
     }
     if (!length_str) {
-	code = 411; message = "Length Required";
-	XMLRPC_FAIL(&env, XMLRPC_INTERNAL_ERROR, "Content-length required");
+        code = 411; message = "Length Required";
+        XMLRPC_FAIL(&env, XMLRPC_INTERNAL_ERROR, "Content-length required");
     }
 
     /* Get our content length. */
     length = atoi(length_str);
     if (length <= 0) {
-	code = 400; message = "Bad Request";
-	XMLRPC_FAIL(&env, XMLRPC_INTERNAL_ERROR, "Content-length must be > 0");
+        code = 400; message = "Bad Request";
+        XMLRPC_FAIL(&env, XMLRPC_INTERNAL_ERROR, "Content-length must be > 0");
     }
 
     /* SECURITY: Make sure our content length is legal.
     ** XXX - We can cast 'input_len' because we know it's >= 0, yes? */
     if ((size_t) length > xmlrpc_limit_get(XMLRPC_XML_SIZE_LIMIT_ID)) {
-	code = 400; message = "Bad Request";
-	XMLRPC_FAIL(&env, XMLRPC_LIMIT_EXCEEDED_ERROR,
-		    "XML-RPC request too large");
+        code = 400; message = "Bad Request";
+        XMLRPC_FAIL(&env, XMLRPC_LIMIT_EXCEEDED_ERROR,
+                    "XML-RPC request too large");
     }
 
     /* Get our body. */
@@ -273,8 +237,8 @@ void xmlrpc_cgi_process_call (void)
     input_size = XMLRPC_TYPED_MEM_BLOCK_SIZE(char, input);
 
     /* Process our call. */
-    output = xmlrpc_registry_process_call(&env, registry, NULL,
-					  input_data, input_size);
+    output = xmlrpc_registry_process_call(&env, registryP, NULL,
+                                          input_data, input_size);
     XMLRPC_FAIL_IF_FAULT(&env);
     output_data = XMLRPC_TYPED_MEM_BLOCK_CONTENTS(char, output);
     output_size = XMLRPC_TYPED_MEM_BLOCK_SIZE(char, output);
@@ -284,12 +248,76 @@ void xmlrpc_cgi_process_call (void)
     
  cleanup:
     if (input)
-	xmlrpc_mem_block_free(input);
+        xmlrpc_mem_block_free(input);
     if (output)
-	xmlrpc_mem_block_free(output);
+        xmlrpc_mem_block_free(output);
     
     if (env.fault_occurred)
-	send_error(code, message, &env);
+        send_error(code, message, &env);
 
     xmlrpc_env_clean(&env);
+}
+
+
+
+void
+xmlrpc_cgi_init(int const flags ATTR_UNUSED) {
+    xmlrpc_env env;
+
+    xmlrpc_env_init(&env);
+    globalRegistryP = xmlrpc_registry_new(&env);
+    die_if_fault_occurred(&env);
+    xmlrpc_env_clean(&env);    
+}
+
+
+
+void
+xmlrpc_cgi_cleanup(void) {
+    xmlrpc_registry_free(globalRegistryP);
+}
+
+
+
+xmlrpc_registry *
+xmlrpc_cgi_registry(void) {
+    return globalRegistryP;
+}
+
+
+
+void
+xmlrpc_cgi_add_method(const char *  const method_name,
+                      xmlrpc_method const method,
+                      void *        const user_data) {
+    xmlrpc_env env;
+    xmlrpc_env_init(&env);
+    xmlrpc_registry_add_method(&env, globalRegistryP, NULL, method_name,
+                               method, user_data);
+    die_if_fault_occurred(&env);
+    xmlrpc_env_clean(&env);    
+}
+
+
+
+void
+xmlrpc_cgi_add_method_w_doc(const char *  const method_name,
+                            xmlrpc_method const method,
+                            void *        const user_data,
+                            const char *  const signature,
+                            const char *  const help) {
+    xmlrpc_env env;
+    xmlrpc_env_init(&env);
+    xmlrpc_registry_add_method_w_doc(&env, globalRegistryP, NULL, method_name,
+                                     method, user_data, signature, help);
+    die_if_fault_occurred(&env);
+    xmlrpc_env_clean(&env);    
+}
+
+
+
+void
+xmlrpc_cgi_process_call(void) {
+    
+    xmlrpc_server_cgi_process_call(globalRegistryP);
 }
